<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/team_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/team_a_score"
        android:text="@string/score_a"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        android:textColor="#000000"
        android:textStyle="bold"/>
    <Button
        android:text="@string/plus_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAllCaps="true"
        android:onClick="plus3"/>
    <Button
        android:text="@string/plus_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:textAllCaps="true"
        android:layout_marginRight="5dp"
        android:onClick="plus2"/>
    <Button
        android:text="@string/free_throw"
        android:layout_width="match_parent"
        android:textAllCaps="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:onClick="Freethrow"/>

</LinearLayout>
